--- a/package.json
+++ b/package.json
@@ -9,16 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.16",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/joy": "^5.0.0-beta.19",
+    "@mui/material": "^5.15.1",
+    "@tanstack/react-query": "^5.14.2",
+    "@visx/curve": "^3.3.0",
+    "@visx/gradient": "^3.3.0",
+    "@visx/marker": "^3.5.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/vendor": "^3.5.0",
+    "date-fns": "^3.0.6",
+    "gaussian": "^1.3.0",
+    "next": "14.0.4",
+    "ordinal": "^1.0.3",
+    "prettier": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "usehooks-ts": "^2.9.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "typescript": "^5"
   }
 }
