--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.19",
     "@mui/material": "^5.15.1",
     "@tanstack/react-query": "^5.14.2",
+    "@visx/annotation": "^3.3.0",
     "@visx/curve": "^3.3.0",
     "@visx/gradient": "^3.3.0",
     "@visx/marker": "^3.5.0",
@@ -24,9 +25,7 @@
     "@visx/shape": "^3.5.0",
     "@visx/vendor": "^3.5.0",
     "date-fns": "^3.0.6",
-    "gaussian": "^1.3.0",
     "next": "14.0.4",
-    "ordinal": "^1.0.3",
     "prettier": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
